Fix inconsistent alignment with page titles due to whitespace (#91)

--- a/dcc-portal-ui/app/styles/styles.scss
+++ b/dcc-portal-ui/app/styles/styles.scss
@@ -268,6 +268,10 @@ ol {
 
 .h1-wrap {
   height: 5rem;
+  h1 {
+    display: flex;
+    align-items: center;
+  }
 }
 
 h1.ui-scrollfix, .sug-wrap.ui-scrollfix {
